# flatcitybuf

./: .cursorignore  .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE  README.md  makefile  specification.md
.cursor/rules/: general.mdc  jsts.mdc  mpc.md  rust.mdc
.cursor/rules/memory/: benchmarks.md  productContext.md  progress.md  specification.md  tdd-rust-guidelines.md
.github/workflows/: ci.yaml
scripts/: gen_python.sh  gen_rust.sh  gen_ts.sh
src/fbs/: extension.fbs  feature.fbs  geometry.fbs  header.fbs
src/py/: pyproject.toml
src/py/src/: column_meta.py  header.py
src/py/src/FlatCityBuf/: CityFeature.py  Column.py  GeographicalExtent.py  GeometryType.py  Header.py  SemanticSurfaceType.py  Transform.py
src/python/src/FlatCityBuf/: CityObject.py  CityObjectType.py  ColumnType.py  Geometry.py  ReferenceSystem.py  SemanticObject.py  Vector.py  Vertex.py
src/rust/: .rust-analyzer  Cargo.toml  makefile
src/rust/benches/: read.rs
src/rust/bst/: Cargo.toml  README.md  context.md
src/rust/bst/src/: byte_serializable.rs  error.rs  lib.rs  query.rs  sorted_index.rs
src/rust/bst/src/query/: common.rs  fs.rs  http.rs  mod.rs  stream.rs
src/rust/btree/: Cargo.toml  context.md  progress.md
src/rust/btree/docs/: http-integration.md  implementation-handover.md  performance.md
src/rust/btree/examples/: embedded_tree.rs
src/rust/btree/src/: README.md  entry.rs  errors.rs  http.rs  key.rs  lib.rs  node.rs  query.rs  storage.rs  stream.rs  tree.rs
src/rust/btree/tests/: node_tests.rs  storage_tests.rs  tree_tests.rs
src/rust/cli/: Cargo.toml  README.md
src/rust/cli/src/: main.rs
src/rust/fcb_core/: Cargo.toml  README.md
src/rust/fcb_core/benches/: read.rs  read_attr.rs  read_func.rs  read_http.rs  read_profile.rs
src/rust/fcb_core/scripts/: cjseq_to_fcb.sh
src/rust/fcb_core/src/: cj_utils.rs  const_vars.rs  error.rs  lib.rs
src/rust/fcb_core/src/fb/: extension_generated.rs  feature_generated.rs  geometry_generated.rs  header_generated.rs  mod.rs
src/rust/fcb_core/src/http_reader/: mock_http_range_client.rs  mod.rs  wasm_client.rs
src/rust/fcb_core/src/packed_rtree/: mod.rs
src/rust/fcb_core/src/reader/: attr_query.rs  city_buffer.rs  deserializer.rs  geom_decoder.rs  meta.rs  mod.rs
src/rust/fcb_core/src/static_btree/: key.rs  mocked_http_range_client.rs  stree.rs
src/rust/fcb_core/src/static_btree/query/: stream.rs  tests.rs
src/rust/fcb_core/src/writer/: attr_index.rs  attribute.rs  error.rs  feature_writer.rs  geom_encoder.rs  header_writer.rs  mod.rs  serializer.rs
src/rust/fcb_core/tests/: attr_index.rs  e2e.rs  http.rs  read.rs  serde.rs
src/rust/fcb_core/tests/data/: geom_temp.city.jsonl
src/rust/implicit-btree/: Cargo.toml
src/rust/implicit-btree/src/: entry.rs  error.rs  key.rs  lib.rs
src/rust/packed_rtree/: Cargo.toml
src/rust/packed_rtree/src/: error.rs  lib.rs
src/rust/scripts/: cjseq_to_fcb.sh
src/rust/src/: cj_utils.rs  const_vars.rs  error.rs  fb_cj.rs  feature_generated.rs  feature_writer.rs  file_reader.rs  file_writer.rs  header_generated.rs  lib.rs  main.rs  packedrtree.rs
src/rust/src/btree/: mod.rs
src/rust/src/fcb_serde/: fcb_deserializer.rs  fcb_serializer.rs  mod.rs
src/rust/src/feature_writer/: city_feature_writer.rs  geometry_encoderdecoder.rs
src/rust/src/http_reader/: mock_http_range_client.rs  mod.rs
src/rust/src/reader/: city_buffer.rs  deserializer.rs  geom_decoder.rs  mod.rs
src/rust/src/writer/: attribute.rs  feature_writer.rs  geom_encoder.rs  geometry_encoderdecoder.rs  header_writer.rs  mod.rs  serializer.rs
src/rust/static-btree/: Cargo.toml  README.md  progress.md
src/rust/static-btree/benches/: bench_search.rs
src/rust/static-btree/docs/: handover.md  implementation-strategy.md  implementation_plan.md  implementation_query.md  instruction.md  overview.md  policy.md  policy_claude.md  policy_gemini.md  progress.md  storage-plan.md  task.md  workflow.md
src/rust/static-btree/examples/: basic_usage.rs  http_usage.rs  print_tree.rs
src/rust/static-btree/read/: main.rs
src/rust/static-btree/src/: builder.rs  entry.rs  error.rs  errors.rs  key.rs  lib.rs  mocked_http_range_client.rs  node.rs  payload.rs  query.rs  storage.rs  stree.rs  tree.rs  utils.rs
src/rust/static-btree/src/query/: http.rs  memory.rs  mod.rs  stream.rs  tests.rs  types.rs
src/rust/static-btree/tests/: key_tests.rs  node_tests.rs  tree_tests.rs
src/rust/tests/: e2e.rs  http.rs  read.rs  serde.rs  write.rs
src/rust/wasm/: Cargo.toml  README.md
src/rust/wasm/src/: gloo_client.rs  lib.rs  range_client.rs  util.rs
src/ts/: fcb_wasm.d.ts  fcb_wasm.js  fcb_wasm_bg.wasm  fcb_wasm_bg.wasm.d.ts  index.html  package-lock.json  package.json  tsconfig.json
src/ts/src/: flat-city-buf.ts  header.ts
src/ts/src/flat-city-buf/: city-feature.ts  city-object-type.ts  city-object.ts  column.ts  geographical-extent.ts  geometry-type.ts  geometry.ts  header.ts  reference-system.ts  semantic-object.ts  semantic-surface-type.ts  transform.ts  vector.ts  vertex.ts
