[package]
name = "flatcitybuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "24.3.25"
byteorder = "1.5.0"
cjseq = { git = "https://github.com/HideBa/cjseq", branch = "develop" }
tempfile = "3.14.0"
serde_json = "1.0.133"
anyhow = "1.0.95"
fallible-streaming-iterator = "0.1.9"
clap = "4.5.23"

[lib]
name = "flatcitybuf"
path = "src/lib.rs"


[[bin]]
name = "read"
path = "src/bin/read.rs"

[[bin]]
name = "flatcitybuf_cli"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
memory-stats = "1.2.0"
pretty_assertions = "1.4.1"

[[bench]]
name = "read"
harness = false

# [features]
# default = ["http"]
# http = ["http-range-client", "bytes", "reqwest"]
