[package]
name = "flatcitybuf"
version = "0.1.0"
edition = "2021"

[workspace.lints.clippy]
absolute_path = "warn"
nursery = { level = "warn", priority = -1 }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
http = ["http-range-client", "bytes", "reqwest"]

[dependencies]
flatbuffers = "24.3.25"
byteorder = "1.5.0"
cjseq = { git = "https://github.com/HideBa/cjseq", branch = "develop" }
tempfile = "3.14.0"
serde_json = "1.0.133"
anyhow = "1.0.95"
fallible-streaming-iterator = "0.1.9"
clap = "4.5.23"
http-range-client = { version = "0.9.0", optional = true, default-features = false, features = [
  "reqwest-async",
] }
reqwest = { version = "0.12.12", optional = true }
bytes = { version = "1.9.0", optional = true }
tracing = "0.1.41"
tokio = "1.43.0"

[lib]
name = "flatcitybuf"
path = "src/lib.rs"


[[bin]]
name = "read"
path = "src/bin/read.rs"

[[bin]]
name = "flatcitybuf_cli"
path = "src/main.rs"

[dev-dependencies]
async-trait = "0.1.85"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
memory-stats = "1.2.0"
pretty_assertions = "1.4.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "read"
harness = false
