[package]
name = "flatcitybuf"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["cli", "fcb_core", "packed_rtree", "wasm"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.85"
flatbuffers = "24.3.25"
byteorder = "1.5.0"
cjseq = { git = "https://github.com/HideBa/cjseq", branch = "develop" }
tempfile = "3.14.0"
serde_json = "1.0.133"
serde = "1.0.200"
anyhow = "1.0.95"
fallible-streaming-iterator = "0.1.9"
clap = "4.5.23"
http-range-client = { version = "0.9.0", default-features = false }
reqwest = { version = "0.12.12" }
tracing = "0.1.41"
bytes = "1.9.0"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
memory-stats = "1.2.0"
pretty_assertions = "1.4.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
log = "0.4"

#---WASM dependencies---
getrandom = { version = "0.2.15", features = ["js"] }
gloo-net = "0.6.0"
js-sys = "0.3.77"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
console_log = "0.2"

[dependencies]
