[package]
name = "bst"
version = "0.1.0"
edition = "2021"

[features]
default = ["http"]
http = ["packed_rtree"]

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ordered-float = { workspace = true }
once_cell = { workspace = true }
packed_rtree = { path = "../packed_rtree", optional = true }
thiserror = { workspace = true }
