[package]
name = "bst"
version = "0.1.0"
edition = "2021"

[features]
default = ["http"]
http = ["http-range-client", "async-trait", "bytes"]

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ordered-float = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
http-range-client = { workspace = true, optional = true, default-features = false }
async-trait = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
async-trait = { workspace = true }
bytes = { workspace = true }
tempfile = "3.10.1"
