[package]
name = "btree"
version = "0.1.0"
edition = "2021"

[features]
default = ["http"]
http = ["http-range-client", "tokio", "bytes", "tracing"]

[dependencies]
thiserror = { workspace = true }
lru = "0.10"
chrono = { workspace = true }
ordered-float = { workspace = true }
http-range-client = { workspace = true, optional = true, default-features = false }
bytes = { workspace = true, optional = true }
anyhow = { workspace = true }
tokio = { workspace = true, optional = true, features = ["sync"] }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "embedded_tree"
path = "examples/embedded_tree.rs"
