[package]
name = "fcb_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
fcb_core = { path = "../fcb_core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bson = { workspace = true }
serde_cbor = { workspace = true }
cjseq = { workspace = true }
