[package]
name = "fcb_cli"
version = "0.1.0"
edition = "2021"
authors = ["Hidemichi Baba <baba.papa1120.ba@gmail.com>"]
license = "MIT"
repository = "https://github.com/HideBa/flatcitybuf"
description = "FlatCityBuf is a library for reading and writing CityJSON with FlatBuffers."

[[bin]]
name = "fcb"
path = "src/main.rs"

[dependencies]
fcb_core = { workspace = true, features = ["http"] }
cjseq = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bson = { workspace = true }
serde_cbor = { workspace = true }
thiserror = { workspace = true }
