[package]
name = "fcb_core"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["http"]
http = ["http-range-client", "bytes"]


[dependencies]
bytes = { workspace = true, optional = true }
flatbuffers = { workspace = true }
byteorder = { workspace = true }
cjseq = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
fallible-streaming-iterator = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
packed_rtree = { path = "../packed_rtree" }
bst = { path = "../bst" }
static-btree = { path = "../static-btree" }
ordered-float = { workspace = true }
chrono = { workspace = true }
http-range-client = { workspace = true, default-features = false, optional = true, features = [
  "reqwest-async",
] }
reqwest = { workspace = true, optional = true }
thiserror = { workspace = true }

[target.'cfg(all(feature = "http", not(target_arch = "wasm32")))'.dependencies]
tokio = { workspace = true }
http-range-client = { workspace = true, default-features = false, optional = true, features = [
  "reqwest-async",
] }
reqwest = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true, default-features = false }

[lib]
name = "fcb_core"
path = "src/lib.rs"

[[bin]]
name = "read"
path = "src/bin/read.rs"

[[bin]]
name = "read_profile"
path = "benches/read_profile.rs"

[[bin]]
name = "read_benches"
path = "benches/read_profile.rs"


[[bin]]
name = "read_cj"
path = "src/bin/read_cj.rs"

[[bin]]
name = "read_attr_stream"
path = "src/bin/read_attr_stream.rs"

[[bin]]
name = "read_attr"
path = "src/bin/read_attr.rs"

[[bench]]
name = "read"
harness = false

[[bench]]
name = "read_attr"
harness = false

[dev-dependencies]
async-trait = { workspace = true }
memory-stats = { workspace = true }
pretty_assertions = { workspace = true }
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# --performance comparison
bson = { workspace = true }
serde_cbor = { workspace = true }


[profile.release]
debug = 1
strip = "debuginfo"
