[package]
name = "packed_rtree"
version = "0.1.0"
edition = "2021"

[features]
default = ["http"]
http = ["http-range-client"]

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
http-range-client = { workspace = true, optional = true, default-features = false }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
