[package]
name = "static-btree"
version = "0.1.0"
edition = "2021"
authors = ["HideBa"]
description = "A high-performance static B+tree implementation for read-only workloads"
license = "MIT"
repository = "https://github.com/hideba/flatcitybuf"
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
ordered-float = { workspace = true }
byteorder = { workspace = true }

# SIMD support
# packed_simd = { version = "0.3.9", optional = true }

# For platforms without packed_simd support
bytemuck = { workspace = true }

# Other utilities
lru = { version = "0.13" }
chrono = { workspace = true }

# Async support
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
bst = { path = "../bst" }

# [features]
# default = []
# simd = ["packed_simd"]

# [[bench]]
# name = "search_benchmark"
# harness = false
[[bench]]
name = "bench_search"
harness = false

[[bin]]
name = "read_btree"
path = "read/main.rs"
harness = false


[lib]
name = "static_btree"
path = "src/lib.rs"

[profile.release]
debug = 1
strip = "debuginfo"
